@@ -5,6 +5,7 @@ v0.4 (unreleased):
 - Added a `--bookmark-file` flag to support multiple bookmark config files.
 - Added a `--cleanup` flag to remove old bookmarks that don't exist.
 - Added an `--exec` flag to run a shell command on all of your repos.
+- Added support for shell glob patterns and tilde expansion in bookmark files.
 - Cleaned up the bookmark file format, fixing a related Windows bug. The script
   will automatically migrate to the new one.
 - Fixed a bug related to Python 3 compatibility.
